--- a/drupal8docker/config/drupal/composer.json
+++ b/drupal8docker/config/drupal/composer.json
@@ -35,7 +35,8 @@
         "drupal/backup_migrate" : "^4.1",
         "drupal/entity" : "^1.0",
         "drupal/pathauto" : "^1.8",
-        "drupal/token": "1.6"
+        "drupal/token": "1.6",
+        "drupal/webform": "^5.17"
     },
     "require-dev": {
         "webflo/drupal-core-require-dev": ">=8"
