--- a/drupal8docker/sync/core.extension.yml
+++ b/drupal8docker/sync/core.extension.yml
@@ -40,6 +40,7 @@ module:
   update: 0
   user: 0
   views_ui: 0
+  webform: 0
   menu_link_content: 1
   views: 10
   standard: 1000
@@ -48,6 +49,8 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  bootstrap_barrio: 0
+  bootstrap_barrio_subtheme: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
