--- a/drupal8docker/sync/system.site.yml
+++ b/drupal8docker/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: e6356802-8293-4292-bb95-347d77a67245
-name: MySite
+name: 'Randall Library Staff'
 mail: noreply@example.com
 slogan: ''
 page:
