july 1 config settings

--- a/drupal8docker/sync/system.site.yml
+++ b/drupal8docker/sync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: e6356802-8293-4292-bb95-347d77a67245
 name: 'Randall Library Staff'
-mail: noreply@example.com
+mail: libref@uncw.edu
 slogan: ''
 page:
   403: ''
