--- a/drupal8docker/sync/core.extension.yml
+++ b/drupal8docker/sync/core.extension.yml
@@ -10,6 +10,7 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -34,14 +35,22 @@ module:
   shortcut: 0
   system: 0
   taxonomy: 0
+  telephone: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   update: 0
   user: 0
   views_ui: 0
   webform: 0
+  webform_access: 0
+  webform_attachment: 0
+  webform_node: 0
+  webform_submission_log: 0
+  webform_ui: 0
   menu_link_content: 1
+  pathauto: 1
   views: 10
   standard: 1000
 theme:
