--- a/drupal8docker/sync/core.extension.yml
+++ b/drupal8docker/sync/core.extension.yml
@@ -22,6 +22,9 @@ module:
   help: 0
   history: 0
   image: 0
+  ldap_authentication: 0
+  ldap_servers: 0
+  ldap_user: 0
   link: 0
   menu_ui: 0
   node: 0
@@ -51,6 +54,7 @@ module:
   webform_ui: 0
   menu_link_content: 1
   pathauto: 1
+  externalauth: 10
   views: 10
   standard: 1000
 theme:
