--- a/drupal8docker/sync/ldap_servers.server.uncw.yml
+++ b/drupal8docker/sync/ldap_servers.server.uncw.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 id: uncw
 label: UNCW
 type: ad
-address: "ldap.uncw.edu"
+address: ldap.uncw.edu
 port: 389
 timeout: 10
 tls: false
