--- a/drupal8docker/sync/bootstrap_barrio_subtheme.settings.yml
+++ b/drupal8docker/sync/bootstrap_barrio_subtheme.settings.yml
@@ -1,10 +1,10 @@
 bootstrap_barrio_library: production
 bootstrap_barrio_sidebar_position: right
-bootstrap_barrio_content_offset: 0
-bootstrap_barrio_sidebar_first_width: 4
-bootstrap_barrio_sidebar_first_offset: 0
-bootstrap_barrio_sidebar_second_width: 3
-bootstrap_barrio_sidebar_second_offset: 0
+bootstrap_barrio_content_offset: '0'
+bootstrap_barrio_sidebar_first_width: '4'
+bootstrap_barrio_sidebar_first_offset: '0'
+bootstrap_barrio_sidebar_second_width: '3'
+bootstrap_barrio_sidebar_second_offset: '0'
 bootstrap_barrio_fluid_container: 0
 bootstrap_barrio_button: 1
 bootstrap_barrio_button_size: ''
@@ -12,22 +12,22 @@ bootstrap_barrio_button_outline: 0
 bootstrap_barrio_navbar_toggle: navbar-toggleable-lg
 bootstrap_barrio_navbar_container: 0
 bootstrap_barrio_navbar_top_position: ''
-bootstrap_barrio_navbar_top_color: null
+bootstrap_barrio_navbar_top_color: ''
 bootstrap_barrio_navbar_position: ''
-bootstrap_barrio_navbar_color: null
+bootstrap_barrio_navbar_color: ''
 bootstrap_barrio_table_hover: 1
 _core:
   default_config_hash: LdPjc1VCTO3_q56LqMexIbDmRvhlTEdTFHajPe4laUs
 features:
-  node_user_picture: true
-  comment_user_picture: true
-  comment_user_verification: true
-  favicon: true
+  node_user_picture: 1
+  comment_user_picture: 1
+  comment_user_verification: 1
+  favicon: 1
 logo:
-  use_default: true
+  use_default: 1
   path: ''
 favicon:
-  use_default: true
+  use_default: 1
 bootstrap_barrio_region_clean_top_header: 0
 bootstrap_barrio_region_class_top_header: row
 bootstrap_barrio_region_clean_top_header_form: 0
@@ -91,3 +91,6 @@ bootstrap_barrio_icons: ''
 bootstrap_barrio_system_messages: ''
 bootstrap_barrio_table_style: ''
 bootstrap_barrio_table_head: ''
+bootstrap_barrio_navbar_top_class: ''
+bootstrap_barrio_navbar_class: ''
+bootstrap_barrio_bootstrap_icons: 0
