--- a/drupal8docker/sync/ldap_user.settings.yml
+++ b/drupal8docker/sync/ldap_user.settings.yml
@@ -1,7 +1,7 @@
-drupalAcctProvisionServer: '0'
-ldapEntryProvisionServer: '0'
+drupalAcctProvisionServer: uncw
+ldapEntryProvisionServer: null
 drupalAcctProvisionTriggers:
-  drupal_on_login: '0'
+  drupal_on_login: drupal_on_login
   drupal_on_update_create: '0'
 ldapEntryProvisionTriggers:
   ldap_on_update_create: '0'
@@ -9,13 +9,16 @@ ldapEntryProvisionTriggers:
   ldap_on_delete: '0'
   drupal_on_manual_creation: '0'
 userUpdateCronQuery: none
-userUpdateCronInterval: daily
-orphanedDrupalAcctBehavior: ldap_user_orphan_email
+userUpdateCronInterval: monthly
+orphanedDrupalAcctBehavior: ldap_user_orphan_do_not_check
 orphanedCheckQty: 100
 orphanedAccountCheckInterval: weekly
 userConflictResolve: resolve
-manualAccountConflict: conflict_reject
+manualAccountConflict: conflict_associate
 acctCreation: ldap_behaviour
-ldapUserSyncMappings: {  }
+ldapUserSyncMappings:
+  drupal: {  }
+  ldap: {  }
 _core:
   default_config_hash: hjgcuHpcsme6SW-7MKpZm3bhnR76f1yX2Y8Xe0STesw
+disableAdminPasswordField: false
