--- a/drupal8docker/sync/node.type.shout_outs.yml
+++ b/drupal8docker/sync/node.type.shout_outs.yml
@@ -11,8 +11,8 @@ third_party_settings:
     parent: 'main:'
 name: 'Shout Outs'
 type: shout_outs
-description: ''
-help: "<p>\r\n\t<img alt=\"Shout Out\" class=\"floatleft\" src=\"/sites/default/files/images/megaphone_0.gif\" style=\"width: 100px; height: 76px; float: left;\" />Fill out this form to give a Library Staff member a Shout Out.<br />\r\n\r\n\tEvery Friday Team Randall will send out an AllStaff email honoring those who received a Shout Out that week.</p>"
+description: 'Shout Outs recognize co-workers for a job well done!'
+help: "<p>\r\n\tFill out this form to give a Library Staff member a Shout Out.<br />\r\n\r\n\tEvery Friday Team Randall will send out an AllStaff email honoring those who received a Shout Out that week.</p>"
 new_revision: false
 preview_mode: 1
 display_submitted: true
