--- a/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
+++ b/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
@@ -12,7 +12,7 @@ id: webinar_online_training_request_
 title: 'Webinar/Online Training Request Form'
 description: "<ul>\r\n\t<li>\r\n\t\tFill out this form AFTER the webinar/online training has been approved by your supervisor.</li>\r\n\t<li>\r\n\t\tThis form will send an email to you, your supervisor and to Sherry.</li>\r\n\t<li>\r\n\t\tSherry will purchase the webinar/training on your behalf and you will receive the viewing/registration info.</li>\r\n</ul>"
 category: ''
-elements: "your_name:\n  '#type': textfield\n  '#title': 'Your name'\n  '#required': true\n  '#format_items': comma\nyour_email:\n  '#type': email\n  '#title': 'Your email'\n  '#required': true\n  '#default_value': 'current-user:mail'\nyour_supervisor_s_email:\n  '#type': email\n  '#title': 'Your supervisor''s email'\n  '#required': true\n  '#format_items': comma\nrequest_approved:\n  '#type': select\n  '#title': 'Request approved'\n  '#options':\n    1: 'I certify that this travel request has already been approved by my supervisor, and this funding type indicated below is accurate.'\n    2: 'This request has not been approved.'\n  '#required': true\ndivisional_or_library_wide_funding:\n  '#type': select\n  '#title': 'Divisional or Library-wide Funding'\n  '#options':\n    - 'Division (RIS, ITS, TS, etc.)'\n    - 'Library-wide (Relevant to whole library)'\n  '#required': true\nwebinar_training_title:\n  '#type': textfield\n  '#title': 'Webinar/Training Title'\n  '#required': true\n  '#format_items': comma\ndate_of_webinar_training:\n  '#type': date\n  '#title': 'Date of webinar/training'\n  '#format_items': comma\n  '#step': '2'\n  '#date_date_format': ''\nurl_for_registration:\n  '#type': textfield\n  '#title': 'URL for registration'\n  '#required': true\n  '#format_items': comma\nregistration_amount:\n  '#type': textfield\n  '#title': 'Registration amount'\n  '#required': true\n  '#format_items': comma\ndo_you_have_a_relevant_membership_:\n  '#type': select\n  '#title': 'Do you have a relevant membership?'\n  '#options': yes_no\n  '#required': true\nprovide_membership_information:\n  '#type': textfield\n  '#title': 'Provide membership information'\n  '#format_items': comma\nnotes:\n  '#type': textarea\n  '#title': Notes\n  '#format_items': comma"
+elements: "your_name:\n  '#type': textfield\n  '#title': 'Your name'\n  '#required': true\n  '#format_items': comma\nyour_email:\n  '#type': email\n  '#title': 'Your email'\n  '#required': true\n  '#default_value': 'current-user:mail'\nyour_supervisor_s_email:\n  '#type': email\n  '#title': 'Your supervisor''s email'\n  '#required': true\n  '#format_items': comma\nrequest_approved:\n  '#type': select\n  '#title': 'Request approved'\n  '#options':\n    1: 'I certify that this travel request has already been approved by my supervisor, and this funding type indicated below is accurate.'\n    2: 'This request has not been approved.'\n  '#required': true\ndivisional_or_library_wide_funding:\n  '#type': select\n  '#title': 'Divisional or Library-wide Funding'\n  '#options':\n    - 'Division (RIS, ITS, TS, etc.)'\n    - 'Library-wide (Relevant to whole library)'\n  '#required': true\ncovid_spending_guidance_and_restrictions_for_2020:\n  '#type': textarea\n  '#title': 'Covid Spending Guidance and Restrictions for 2020'\n  '#description': 'Is this webinar/training &quot;necessary and essential&quot; for your position? If so, please explain why. Please work with your supervisor for this justification language.'\n  '#required': true\nwebinar_training_title:\n  '#type': textfield\n  '#title': 'Webinar/Training Title'\n  '#required': true\n  '#format_items': comma\ndate_of_webinar_training:\n  '#type': date\n  '#title': 'Date of webinar/training'\n  '#format_items': comma\n  '#step': '2'\n  '#date_date_format': ''\nurl_for_registration:\n  '#type': textfield\n  '#title': 'URL for registration'\n  '#required': true\n  '#format_items': comma\nregistration_amount:\n  '#type': textfield\n  '#title': 'Registration amount'\n  '#required': true\n  '#format_items': comma\ndo_you_have_a_relevant_membership_:\n  '#type': select\n  '#title': 'Do you have a relevant membership?'\n  '#options': yes_no\n  '#required': true\nprovide_membership_information:\n  '#type': textfield\n  '#title': 'Provide membership information'\n  '#format_items': comma\nnotes:\n  '#type': textarea\n  '#title': Notes\n  '#format_items': comma"
 css: ''
 javascript: ''
 settings:
@@ -25,7 +25,7 @@ settings:
   page_submit_path: ''
   page_confirm_path: ''
   page_theme_name: ''
-  form_title: both
+  form_title: source_entity_webform
   form_submit_once: false
   form_exception_message: ''
   form_open_message: ''
@@ -43,7 +43,7 @@ settings:
   form_disable_autocomplete: false
   form_novalidate: false
   form_disable_inline_errors: false
-  form_required: false
+  form_required: true
   form_unsaved: false
   form_disable_back: false
   form_submit_back: false
@@ -92,7 +92,7 @@ settings:
   wizard_track: ''
   wizard_prev_button_label: ''
   wizard_next_button_label: ''
-  wizard_toggle: false
+  wizard_toggle: true
   wizard_toggle_show_label: ''
   wizard_toggle_hide_label: ''
   preview: 0
@@ -187,5 +187,113 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
-handlers: {  }
+handlers:
+  email:
+    id: email
+    label: 'Your Email'
+    handler_id: email
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: '[webform_submission:values:your_email:raw]'
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: '[webform_submission:values:your_email:raw]'
+      from_options: {  }
+      from_name: '[webform_submission:values:your_name:raw]'
+      subject: _default
+      body: _default
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: true
+      exclude_empty_checkbox: false
+      exclude_attachments: false
+      html: true
+      attachments: false
+      twig: false
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
+      parameters: {  }
+  email_1:
+    id: email
+    label: 'Sherry''s Email'
+    handler_id: email_1
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: matsons@uncw.edu
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: '[webform_submission:values:your_email:raw]'
+      from_options: {  }
+      from_name: '[webform_submission:values:your_name:raw]'
+      subject: _default
+      body: _default
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: false
+      exclude_empty_checkbox: false
+      exclude_attachments: false
+      html: true
+      attachments: false
+      twig: false
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
+      parameters: {  }
+  email_2:
+    id: email
+    label: 'Supervisor Email'
+    handler_id: email_2
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: '[webform_submission:values:your_supervisor_s_email:raw]'
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: '[webform_submission:values:your_name:raw]'
+      from_options: {  }
+      from_name: '[webform_submission:values:your_name:raw]'
+      subject: _default
+      body: _default
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: false
+      exclude_empty_checkbox: false
+      exclude_attachments: false
+      html: true
+      attachments: false
+      twig: false
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
+      parameters: {  }
 variants: {  }
