--- a/drupal8docker/sync/color.theme.bootstrap_barrio_subtheme.yml
+++ b/drupal8docker/sync/color.theme.bootstrap_barrio_subtheme.yml
@@ -1,18 +1,18 @@
 palette:
-  top: '#d7d7d7'
-  bottom: '#d7d7d7'
-  bg: '#ffffff'
-  sidebar: '#f6f6f2'
-  sidebarborders: '#f9f9f9'
-  footer: '#292929'
-  button: '#006666'
-  buttonhover: '#0256b1'
-  titleslogan: '#fffeff'
+  top: '#f2eeee'
+  bottom: '#FFFFFF'
+  bg: '#eeeded'
+  sidebar: '#FFFFFF'
+  sidebarborders: '#FFFFFF'
+  footer: '#ff5757'
+  button: '#40e3e3'
+  buttonhover: '#c56d26'
+  titleslogan: '#e435e4'
   text: '#3b3b3b'
-  link: '#006666'
-logo: 'public://color/bootstrap_barrio_subtheme-a24f5a8f/logo.svg'
+  link: '#000000'
+logo: 'public://color/bootstrap_barrio_subtheme-dae0ea82/logo.svg'
 stylesheets:
-  - 'public://color/bootstrap_barrio_subtheme-a24f5a8f/colors.css'
+  - 'public://color/bootstrap_barrio_subtheme-dae0ea82/colors.css'
 files:
-  - 'public://color/bootstrap_barrio_subtheme-a24f5a8f/logo.svg'
-  - 'public://color/bootstrap_barrio_subtheme-a24f5a8f/colors.css'
+  - 'public://color/bootstrap_barrio_subtheme-dae0ea82/logo.svg'
+  - 'public://color/bootstrap_barrio_subtheme-dae0ea82/colors.css'
