--- a/drupal8docker/sync/block.block.staff_subtheme_account_menu.yml
+++ b/drupal8docker/sync/block.block.staff_subtheme_account_menu.yml
@@ -1,4 +1,4 @@
-uuid: 4ba0fee3-de1b-43b2-ad9e-6954380742ce
+uuid: b812deea-9b50-4b14-93c7-ac21e6c322c9
 langcode: en
 status: true
 dependencies:
@@ -7,21 +7,26 @@ dependencies:
   module:
     - system
   theme:
-    - bootstrap_barrio_subtheme
+    - staff_subtheme
 _core:
   default_config_hash: 8a31Ywc1t2zlddGd3bmDrFMefWqgSK2E02ceFdr-bfc
-id: bootstrap_barrio_subtheme_account_menu
-theme: bootstrap_barrio_subtheme
-region: secondary_menu
-weight: 0
+id: staff_subtheme_account_menu
+theme: staff_subtheme
+region: sidebar_second
+weight: -6
 provider: null
 plugin: 'system_menu_block:account'
 settings:
   id: 'system_menu_block:account'
-  label: 'User account menu'
+  label: Login
   provider: system
   label_display: '0'
   level: 1
   depth: 1
   expand_all_items: false
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "<front>\r\nnode/add/*\r\nfys_critic_assessment"
+    negate: false
+    context_mapping: {  }
