--- a/drupal8docker/sync/block.block.staff_subtheme_breadcrumbs.yml
+++ b/drupal8docker/sync/block.block.staff_subtheme_breadcrumbs.yml
@@ -1,15 +1,15 @@
-uuid: 27b4b254-b364-4ec9-a0ea-9bc8349db47f
+uuid: 2563a37a-abcd-4079-908b-d35653140f02
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - bootstrap_barrio_subtheme
+    - staff_subtheme
 _core:
   default_config_hash: oXUb3JZR2WW5VOdw4HrhRicCsq51mCgLfRyvheG68ck
-id: bootstrap_barrio_subtheme_breadcrumbs
-theme: bootstrap_barrio_subtheme
+id: staff_subtheme_breadcrumbs
+theme: staff_subtheme
 region: breadcrumb
 weight: 0
 provider: null
