--- a/drupal8docker/sync/block.block.staff_subtheme_page_title.yml
+++ b/drupal8docker/sync/block.block.staff_subtheme_page_title.yml
@@ -1,13 +1,13 @@
-uuid: 38213e11-c332-4628-80ef-1daca8fd77e9
+uuid: 0fe4e5cb-20e5-4792-bd16-fe6309569526
 langcode: en
 status: true
 dependencies:
   theme:
-    - bootstrap_barrio_subtheme
+    - staff_subtheme
 _core:
   default_config_hash: 7rR9chwXvdM2H8OYMAYx9Zj3GGlPMrZp_M3ZA4thYTk
-id: bootstrap_barrio_subtheme_page_title
-theme: bootstrap_barrio_subtheme
+id: staff_subtheme_page_title
+theme: staff_subtheme
 region: content
 weight: -50
 provider: null
