--- a/drupal8docker/sync/block.block.staff_subtheme_powered.yml
+++ b/drupal8docker/sync/block.block.staff_subtheme_powered.yml
@@ -1,22 +1,22 @@
-uuid: 6fa82d65-4179-493c-a2fc-4dbfdc0778bf
+uuid: f33ca71d-2bf9-479c-9969-901e2a00d553
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - system
   theme:
-    - bootstrap_barrio_subtheme
+    - staff_subtheme
 _core:
   default_config_hash: jQQUUWN2Uxr5qZtc9zcJKBCxpKY8orN1u2HPqYYRQDI
-id: bootstrap_barrio_subtheme_powered
-theme: bootstrap_barrio_subtheme
+id: staff_subtheme_powered
+theme: staff_subtheme
 region: footer_fifth
 weight: 10
 provider: null
 plugin: system_powered_by_block
 settings:
   id: system_powered_by_block
-  label: 'Powered by Drupal'
+  label: ''
   provider: system
   label_display: '0'
 visibility: {  }
