--- a/drupal8docker/sync/core.extension.yml
+++ b/drupal8docker/sync/core.extension.yml
@@ -64,7 +64,7 @@ theme:
   bartik: 0
   seven: 0
   bootstrap_barrio: 0
-  bootstrap_barrio_subtheme: 0
+  staff_subtheme: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
