--- a/drupal8docker/sync/system.theme.yml
+++ b/drupal8docker/sync/system.theme.yml
@@ -1,4 +1,4 @@
 admin: seven
-default: bootstrap_barrio_subtheme
+default: staff_subtheme
 _core:
   default_config_hash: fOjer9hADYYnbCJVZMFZIIM1azTFWyg84ZkFDHfAbUg
