--- a/drupal8docker/themes/custom/staff_subtheme/staff_subtheme.libraries.yml
+++ b/drupal8docker/themes/custom/staff_subtheme/staff_subtheme.libraries.yml
@@ -29,3 +29,9 @@ color.preview:
     color/preview.js: {}
   dependencies:
     - color/drupal.color
+open_sans:
+  version: VERSION
+  css:
+    component:
+      fonts/open_sans.css: {}
+      //fonts.googleapis.com/css?family=Open+Sans:300,400,600,700: {}
