--- a/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
+++ b/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
@@ -1,4 +1,3 @@
-uuid: 7db81696-7cee-43ac-b3e0-2035a6bcfd95
 langcode: en
 status: open
 dependencies: {  }
@@ -85,6 +84,8 @@ settings:
   wizard_progress_link: false
   wizard_progress_states: false
   wizard_auto_forward: true
+  wizard_auto_forward_hide_next_button: false
+  wizard_keyboard: true
   wizard_start_label: ''
   wizard_preview_link: false
   wizard_confirmation: true
@@ -140,6 +141,7 @@ settings:
   results_customize: false
   token_view: false
   token_update: false
+  serial_disabled: false
 access:
   create:
     roles:
@@ -297,3 +299,4 @@ handlers:
       theme_name: ''
       parameters: {  }
 variants: {  }
+uuid: 7db81696-7cee-43ac-b3e0-2035a6bcfd95
