rough draft of css

--- a/drupal8docker/themes/custom/staff_subtheme/staff_subtheme.libraries.yml
+++ b/drupal8docker/themes/custom/staff_subtheme/staff_subtheme.libraries.yml
@@ -3,7 +3,7 @@ global-styling:
   js:
     js/global.js: {}
   css:
-    component:
+    theme:
       css/style.css: {}
       css/colors.css: {}
 bootstrap:
