--- a/drupal8docker/sync/color.theme.staff_subtheme.yml
+++ b/drupal8docker/sync/color.theme.staff_subtheme.yml
@@ -1,18 +1,18 @@
 palette:
-  top: '#fcfcfc'
+  top: '#fff070'
   bottom: '#fcfcfc'
   bg: '#eaeaea'
   sidebar: '#fcfcfc'
   sidebarborders: '#f9f9f9'
-  footer: '#fcfcfc'
+  footer: '#eaeaea'
   button: '#444444'
   buttonhover: '#006666'
   titleslogan: '#000000'
   text: '#3b3b3b'
   link: '#006666'
-logo: 'public://color/staff_subtheme-430a61ad/logo.svg'
+logo: 'public://color/staff_subtheme-048767d7/logo.svg'
 stylesheets:
-  - 'public://color/staff_subtheme-430a61ad/colors.css'
+  - 'public://color/staff_subtheme-048767d7/colors.css'
 files:
-  - 'public://color/staff_subtheme-430a61ad/logo.svg'
-  - 'public://color/staff_subtheme-430a61ad/colors.css'
+  - 'public://color/staff_subtheme-048767d7/logo.svg'
+  - 'public://color/staff_subtheme-048767d7/colors.css'
