--- a/drupal8docker/sync/block.block.staff_subtheme_tools.yml
+++ b/drupal8docker/sync/block.block.staff_subtheme_tools.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: rH6PpAn7-RScha1rGkohGAYSSh_1OVeZzioJPzPw6O4
 id: staff_subtheme_tools
 theme: staff_subtheme
-region: sidebar_second
-weight: -5
+region: top_header
+weight: -6
 provider: null
 plugin: 'system_menu_block:tools'
 settings:
