--- a/drupal8docker/sync/staff_subtheme.settings.yml
+++ b/drupal8docker/sync/staff_subtheme.settings.yml
@@ -1,9 +1,9 @@
 bootstrap_barrio_library: production
-bootstrap_barrio_sidebar_position: both
+bootstrap_barrio_sidebar_position: left
 bootstrap_barrio_content_offset: '0'
-bootstrap_barrio_sidebar_first_width: '4'
+bootstrap_barrio_sidebar_first_width: '2'
 bootstrap_barrio_sidebar_first_offset: '0'
-bootstrap_barrio_sidebar_second_width: '3'
+bootstrap_barrio_sidebar_second_width: '2'
 bootstrap_barrio_sidebar_second_offset: '0'
 bootstrap_barrio_fluid_container: 0
 bootstrap_barrio_button: 1
@@ -50,7 +50,7 @@ bootstrap_barrio_region_clean_header_form: 0
 bootstrap_barrio_region_class_header_form: row
 bootstrap_barrio_region_clean_primary_menu: 1
 bootstrap_barrio_region_class_primary_menu: ''
-bootstrap_barrio_region_clean_secondary_menu: 0
+bootstrap_barrio_region_clean_secondary_menu: 1
 bootstrap_barrio_region_class_secondary_menu: row
 bootstrap_barrio_region_clean_page_top: 0
 bootstrap_barrio_region_class_page_top: row
@@ -82,7 +82,7 @@ bootstrap_barrio_region_clean_footer_third: 0
 bootstrap_barrio_region_class_footer_third: row
 bootstrap_barrio_region_clean_footer_fourth: 0
 bootstrap_barrio_region_class_footer_fourth: row
-bootstrap_barrio_region_clean_footer_fifth: 0
+bootstrap_barrio_region_clean_footer_fifth: 1
 bootstrap_barrio_region_class_footer_fifth: row
 bootstrap_barrio_sidebar_collapse: 0
 bootstrap_barrio_image_fluid: 0
