--- a/drupal8docker/sync/user.role.anonymous.yml
+++ b/drupal8docker/sync/user.role.anonymous.yml
@@ -12,5 +12,9 @@ permissions:
   - 'access comments'
   - 'access content'
   - 'access site-wide contact form'
+  - 'create shout_outs content'
+  - 'post comments'
   - 'search content'
+  - 'skip comment approval'
+  - 'use advanced search'
   - 'use text format restricted_html'
