--- a/drupal8docker/sync/webform.webform.contact.yml
+++ b/drupal8docker/sync/webform.webform.contact.yml
@@ -196,6 +196,7 @@ handlers:
   email_confirmation:
     id: email
     label: 'Email confirmation'
+    notes: ''
     handler_id: email_confirmation
     status: true
     conditions: {  }
@@ -232,6 +233,7 @@ handlers:
   email_notification:
     id: email
     label: 'Email notification'
+    notes: ''
     handler_id: email_notification
     status: true
     conditions: {  }
