--- a/drupal8docker/sync/webform.webform.incident_event_report.yml
+++ b/drupal8docker/sync/webform.webform.incident_event_report.yml
@@ -191,6 +191,7 @@ handlers:
   email:
     id: email
     label: Email
+    notes: ''
     handler_id: email
     status: true
     conditions: {  }
@@ -251,6 +252,7 @@ handlers:
   email_1:
     id: email
     label: 'Your Email'
+    notes: ''
     handler_id: email_1
     status: true
     conditions: {  }
