--- a/docker-compose-rancher.yml
+++ b/docker-compose-rancher.yml
@@ -13,32 +13,17 @@ services:
       WEB_USER: www-data
     stdin_open: true
     volumes:
-    - /home/randall/volumes/d8staff/sync:/drupal_sync
-    - /home/randall/volumes/d8staff/themes:/drupal_app/web/themes/contrib
-    - /home/randall/volumes/d8staff/modules/custom:/drupal_app/web/modules/custom
-    - drupal_data:/drupal_app
+    - /home/randall/volumes/d8-staff/private:/var/www/html/private
+    - /home/randall/volumes/d8-staff/files:/var/www/html/web/sites/default/files
     tty: true
     labels:
       io.rancher.container.pull_image: always
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin/phpmyadmin:4.7
     environment:
       PMA_HOST: db
     stdin_open: true
     tty: true
-  nginx:
-    image: nginx:1.16.0
-    environment:
-      NGINX_SERVER_ROOT: /drupal_app/web
-      WEB_GROUP: www-data
-      WEB_USER: www-data
-    stdin_open: true
-    volumes:
-    - /home/randall/volumes/d8staff/config/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    - drupal_data:/drupal_app
-    tty: true
-    labels:
-      io.rancher.container.pull_image: always
   db-backup:
     image: libapps-admin.uncw.edu:8000/randall-dev/test-sidekick
     environment:
@@ -47,7 +32,7 @@ services:
       ROOT_PASSWORD: CHANGEME
     stdin_open: true
     volumes:
-    - /home/randall/volumes/backups/Backups/d8staff:/backups
+    - /home/randall/volumes/backups/Backups/d8-staff:/backups
     tty: true
     labels:
       io.rancher.container.pull_image: always
@@ -60,8 +45,7 @@ services:
       TZ: America/New_York
     stdin_open: true
     volumes:
-    - /home/randall/volumes/d8staff/mysql:/var/lib/mysql
-    - /home/randall/volumes/d8staff/db_autoimport:/docker-entrypoint-initdb.d/
+    - /home/randall/volumes/d8-staff/mysql:/var/lib/mysql
     tty: true
     command:
     - --default-authentication-plugin=mysql_native_password
