upgraded to 8.9.10 & pulled in production drupal_sync files

--- a/drupal8docker/sync/block.block.staff_subtheme_tools.yml
+++ b/drupal8docker/sync/block.block.staff_subtheme_tools.yml
@@ -1,6 +1,6 @@
 uuid: 5e75dff2-17b6-46f8-996a-0f42e01a41b9
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - system.menu.tools
