--- a/drupal8docker/sync/webform.webform.incident_event_report.yml
+++ b/drupal8docker/sync/webform.webform.incident_event_report.yml
@@ -12,7 +12,7 @@ id: incident_event_report
 title: 'Incident Event Report'
 description: ''
 category: ''
-elements: "date_and_time_the_incident_occurred:\n  '#type': datetime\n  '#title': 'Date and time the incident occurred'\n  '#title_display': before\n  '#date_date_format': ''\n  '#date_year_range': '-1:+1'\n  '#date_time_format': ''\n  '#date_time_step': '900'\ncategory:\n  '#type': select\n  '#title': Category\n  '#description': 'Emails are automatically sent to the UL and all ADs, unless otherwise noted.'\n  '#options':\n    '01': 'Theft - Personal Property '\n    '02': 'Theft - Library Property'\n    '03': Assault/Harassment\n    '04': Injury/Illness\n    '05': 'Damage to Property/Vandalism'\n    '06': 'Alarm sounding - Fire or door (No email sent)'\n    '07': 'Problem Patron - Irate, abusive, disorderly conduct, physical altercation'\n    '08': 'Person trapped on elevator (Email will automatically be sent to Christopher Rhodes and Nicole Tekulve)'\n    '09': 'Other – When the incident doesn’t fit any category already listed above; an example is a person sitting in bathroom in a lawn chair '\n  '#required': true\nbrief_description_of_incident:\n  '#type': textarea\n  '#title': 'Brief Description of incident'\n  '#description': |\n    &lt;p&gt;<br />\n    &nbsp;&nbsp; &nbsp;(include names of staff involved in taking action or resolving the issue)&lt;/p&gt;<br />\n    &lt;p&gt;<br />\n    &nbsp;&nbsp; &nbsp;Example: Student came to the desk and reported a creepy looking character who wouldn&amp;rsquo;t leave her alone on the second floor. Called the Police (non-emergency number unless a weapon or threat is involved) and asked student if she was willing to wait.&amp;nbsp; She couldn&amp;rsquo;t wait so I got a description of the creepy looking character.&amp;nbsp; I gave the Police the physical description the student shared and they went to the 2nd floor.&amp;nbsp; Police came back about 10 minutes with the creepy looking character and they left the building.&lt;/p&gt;<br />\n    &nbsp;\n    \n  '#required': true\n  '#format_items': comma\naction_taken:\n  '#type': textfield\n  '#title': 'Action Taken'\n  '#description': |\n    &lt;p&gt;<br />\n    &nbsp;&nbsp; &nbsp;&lt;span class=&quot;comment-text&quot;&gt;&lt;span&gt;&lt;span style=&quot;white-space: pre-wrap;&quot;&gt;(Police, EMS called, supervisor notified, etc.)&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;<br />\n    &nbsp;\n    \n  '#required': true\n  '#format_items': comma\nyour_name:\n  '#type': textfield\n  '#title': 'Your Name'\n  '#required': true\n  '#format_items': comma\nyour_email:\n  '#type': email\n  '#title': 'Your Email'\n  '#description': |\n    &lt;p&gt;<br />\n    &nbsp;&nbsp; &nbsp;You will be sent a email copy of your report.&lt;/p&gt;<br />\n    &nbsp;\n    \n  '#required': true\n  '#format_items': comma"
+elements: "date_and_time_the_incident_occurred:\n  '#type': datetime\n  '#title': 'Date and time the incident occurred'\n  '#title_display': before\n  '#date_date_format': ''\n  '#date_year_range': '-1:+1'\n  '#date_time_format': ''\n  '#date_time_step': '900'\ncategory:\n  '#type': select\n  '#title': Category\n  '#description': 'Emails are automatically sent to the UL and all ADs, unless otherwise noted.'\n  '#options':\n    '01': 'Theft - Personal Property '\n    '02': 'Theft - Library Property'\n    '03': Assault/Harassment\n    '04': Injury/Illness\n    '05': 'Damage to Property/Vandalism'\n    '06': 'Alarm sounding - Fire or door (No email sent)'\n    '07': 'Problem Patron - Irate, abusive, disorderly conduct, physical altercation'\n    '08': 'Person trapped on elevator (Email will automatically be sent to Christopher Rhodes and Nicole Tekulve)'\n    '09': 'Other – When the incident doesn’t fit any category already listed above; an example is a person sitting in bathroom in a lawn chair '\n  '#required': true\nbrief_description_of_incident:\n  '#type': textarea\n  '#title': 'Brief Description of incident'\n  '#description': |\n    &nbsp; &nbsp; (include names of staff involved in taking action or resolving the issue)<br />\n    &nbsp;&nbsp; &nbsp;Example: Student came to the desk and reported a creepy looking character who wouldn&#39;t leave her alone on the second floor. Called the Police (non-emergency number unless a weapon or threat is involved) and asked student if she was willing to wait; She couldn&#39;t wait so I got a description of the creepy looking character. I gave the Police the physical description the student shared and they went to the 2nd floor. Police came back about 10 minutes with the creepy looking character and they left the building.<br />\n    &nbsp;\n    \n  '#required': true\n  '#format_items': comma\naction_taken:\n  '#type': textfield\n  '#title': 'Action Taken'\n  '#description': '(Police, EMS called, supervisor notified, etc.)'\n  '#required': true\n  '#format_items': comma\nyour_name:\n  '#type': textfield\n  '#title': 'Your Name'\n  '#required': true\n  '#format_items': comma\nyour_email:\n  '#type': email\n  '#title': 'Your Email'\n  '#description': |\n    You will be sent a email copy of your report.<br />\n    &nbsp;\n    \n  '#required': true\n  '#format_items': comma"
 css: ''
 javascript: ''
 settings:
@@ -25,7 +25,7 @@ settings:
   page_submit_path: ''
   page_confirm_path: ''
   page_theme_name: ''
-  form_title: both
+  form_title: source_entity_webform
   form_submit_once: false
   form_exception_message: ''
   form_open_message: ''
@@ -33,7 +33,7 @@ settings:
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
-  form_remote_addr: true
+  form_remote_addr: false
   form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
@@ -43,7 +43,7 @@ settings:
   form_disable_autocomplete: false
   form_novalidate: false
   form_disable_inline_errors: false
-  form_required: false
+  form_required: true
   form_unsaved: false
   form_disable_back: false
   form_submit_back: false
@@ -92,7 +92,7 @@ settings:
   wizard_track: ''
   wizard_prev_button_label: ''
   wizard_next_button_label: ''
-  wizard_toggle: false
+  wizard_toggle: true
   wizard_toggle_show_label: ''
   wizard_toggle_hide_label: ''
   preview: 0
@@ -140,6 +140,9 @@ settings:
   results_customize: false
   token_view: false
   token_update: false
+  wizard_auto_forward_hide_next_button: false
+  wizard_keyboard: true
+  serial_disabled: false
 access:
   create:
     roles:
