--- a/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
+++ b/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
@@ -33,7 +33,7 @@ settings:
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
-  form_remote_addr: true
+  form_remote_addr: false
   form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
@@ -230,7 +230,7 @@ handlers:
       parameters: {  }
   email_1:
     id: email
-    label: 'Sherry''s Email'
+    label: 'Angie''s Email'
     notes: ''
     handler_id: email_1
     status: true
@@ -239,7 +239,7 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: matsons@uncw.edu
+      to_mail: edwardsa@uncw.edu
       to_options: {  }
       cc_mail: ''
       cc_options: {  }
